[package]
name = "unikraft"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Unikraft for Rust."
repository.workspace = true
keywords = ["unikraft", "unikernel"]
categories = ["no-std"]
links = "unikraft"

[build-dependencies]
anyhow = "1.0"

[features]
default = []
kvm = []
linuxu = []

[workspace]
members = ["unikraft-abi"]

[workspace.package]
version = "0.0.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
repository = "https://github.com/mkroening/unikraft-rs"
