[package]
name = "unikraft-abi"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Idiomatic Rust bindings for Unikraft."
repository.workspace = true
categories = ["api-bindings", "memory-management", "os", "no-std"]

[dependencies]
# When built as part of libstd
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.0", optional = true }

[dev-dependencies]
unikraft = { path = ".." }

[features]
default = []
global_allocator = []
panic_handler = []
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
]
